src/app/components/about/about.component.scss
@import 'assets/scss/_base.scss';


.about {
  padding: 128px 24px 50px;

  & h1 {
    color: #a19e9e;
    font-size: 1rem;
    line-height: 1.5;


    & span {
      color: $primary-white;
      text-decoration: double $primary-blue;
      font-weight: bold;
      font-size: 2rem;
      display: block;

      b {
        color: $primary-blue;
      }
    }
  }

  &__img {
    display: block;
    height: 200px;
    margin: 0 auto 30px;
    border-radius: 50%;
    padding: 4px;
    border: 7px solid $primary-blue;
  }

  &__info {

    &-text {
      text-align: initial;
      color: $primary-white;
      padding: 24px 0;
      font-size: 1.2rem;
      font-weight: 500;

      & a {
        color: inherit;
      }
    }

    &-btn {

      a {
        filter: drop-shadow(2px 2px 4px rgba(0,0,0,.25));
        background-color: $cinza-dark-3;
        width: 150px;
        height: 48px;
        font-size: 18px;
        font-weight: 700;
        border-radius: 5px;
        color: $primary-white;
        display: flex;
        align-items: center;
        gap: 10px;
        justify-content: center;

        &:first-of-type {
          margin-bottom: 16px;
        }

        &:hover {
          border-bottom: 2px solid $primary-blue;
          margin-bottom: -2px;
          cursor: pointer;
        }
      }
    }
  }
}


@media screen and (min-width: 768px) {
  .about {
    padding: 150px 32px 50px;

    h1 span {
      font-size: 2.2rem;
    }

    &__info {
      display: flex;
      flex-direction: column;
      width: 80%;

      &-text {
        padding: 0 0 20px;
      }

      &-btn {
        display: flex;
        gap: 10px;
        & a:first-of-type {
          margin-bottom: 0;
        }
      }
    }

  }
}

@media screen and (min-width: 1024px) {
  .about {
    padding: 170px 100px 50px;
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
    align-items: flex-end;

    & h1 {
      font-size: 1.3rem;
      margin-bottom: 1rem;

      span {
        font-size: 3rem;
      }
    }

    .container {
      width: 60%;
    }

    &__info {

      &-text {
        font-size: 1.4rem;
      }

      &-btn {
        justify-content: start;
        gap: 16px;
      }
    }

    &__img {
      height: 400px;
      margin: 0 auto;
    }
  }
}

